--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ola mundo</title>
+    <title>Ola mundo!</title>
 </head>
 <body>
     <header>
-        <h1>Titulo</h1>
+        <h1>Curso</h1>
     </header>
     <article>
-        <h1>Titulo 001</h1>
-        <p>texto</p>
+        <h1>HTML and CSS</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt dolor necessitatibus similique corrupti deserunt ea voluptate dolorem culpa ab? Voluptas corrupti autem ipsum. Labore exercitationem iusto in assumenda! Itaque, quos.</p>
     </article>
      <article>
-        <h1>Titulo 002</h1>
-        <p>texto</p>
+        <h1>JS</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non sint pariatur dolore ipsam repellat laborum vel autem repudiandae consequatur eveniet qui earum, nisi distinctio deserunt totam laudantium expedita corrupti iure.</p>
     </article>
 </body>
 </html>
